# onlineml

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile.am  README.md  a.txt  config.h  configure.ac  data  data-small
docker/: Dockerfile
legacy/: Makefile.am  configure  configure.ac
legacy/docker/: Dockerfile  test.sh
legacy/onlineml/cmd/: arg.hpp
legacy/onlineml/common/: dict.hpp
legacy/onlineml/learner/: averaged_perceptron.hpp  learner.hpp  perceptron.hpp
legacy/onlineml/util/: string_proc.hpp
legacy/swig/: sample.py  setup.py
onlineml/: CMakeLists.txt  argparser.h  classifier.h  data.cc  data.h  onlineml.h  parameter.cc  parameter.h  parameter_test.cc  string_process.h  trainer.cc  trainer.h
onlineml/classifiers/: perceptron.cc  perceptron.h
onlineml/cmd/: Makefile.am  arg.hpp  parallel_learn_online_model.cpp  test_onlineml_model.cpp  train_online_model.cpp
onlineml/common/: Makefile.am  classifier.h  classifier.hpp  dict.h  dict.hpp
onlineml/learner/: Makefile.am  averaged_perceptron.h  averaged_perceptron.hpp  learner.h  learner.hpp  perceptron.h  perceptron.hpp
onlineml/onlineml_cli/: evaluate.cc  train.cc
onlineml/sample/: Makefile.am  arg.h  learn_online_model.cpp
onlineml/util/: Makefile.am  string_proc.cpp  string_proc.h  string_proc.hpp
src/include/: Makefile.am
src/include/onlineml/: classifier.h
src/include/onlineml/learner/: learner.h  perceptron.h
src/sample/: Makefile.am  learn_online_model.cpp
swig/: Makefile.am  onlineml.swigcxx  sample.py  setup.py
