#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(onlineml, 0.1, takuyamakino15@gmail.com)
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile
		 onlineml/common/Makefile
		 onlineml/sample/Makefile
		 onlineml/learner/Makefile
		 onlineml/util/Makefile
		 ])


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
AC_CONFIG_MACRO_DIR([m4])

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

CXX="g++"
AC_OUTPUT
