# lib_LTLIBRARIES = libonlineml.la
# libonlineml_la_SOURCES = \
#                           onlineml/util.h \
#                           onlineml/util.cpp

onlinemlincludedir = $(includedir)/onlineml/common

onlinemlinclude_HEADERS = \
			  classifier.h \
			  dict.h


# onlinemllearnerincludedir = $(includedir)/onlineml/learner

# onlinemllearnerinclude_HEADERS = \
#                         onlineml/learner/learner.h \
#                         onlineml/learner/perceptron.h 
